--- a/index.html
+++ b/index.html
@@ -295,11 +295,10 @@ surat lamaran pekerjaan dalam bahasa inggris.</p>
 
 <br>
 <br>
-RESOURCE :
+RESOURCE : <a  href="https://www.pujihartono.id/>Pujihartono.id</a>
 <br>
 <br>
 
-<a  href="https://www.pujihartono.id/>Pujihartono.id</a>
     <br>
 <a  href="https://surat-lamaran-kerja.netlify.app/>Panduan 1</a>
                     <br>
