--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ surat lamaran pekerjaan dalam bahasa inggris.</p>
 
 <br>
 <br>
-RESOURCE : <a  href="https://www.pujihartono.id/>Pujihartono.id</a>
+RESOURCE : [https://www.pujihartono.id/](Pujihartono.id</a>)
 <br>
 <br>
 
