--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ surat lamaran pekerjaan yang benar
 surat lamaran pekerjaan dalam bahasa inggris.</p>
 
 
-RESOURCE : <a  href="https://www.pujihartono.id/>Pujihartono.id</a>
+RESOURCE : https://www.pujihartono.id/>
 
 
     
