--- a/index.html
+++ b/index.html
@@ -291,11 +291,12 @@ persyaratan lamaran kerja
 contoh surat lamaran pekerjaan dalam bahasa inggris
 cara mengirim lamaran lewat email
 surat lamaran pekerjaan yang benar
-surat lamaran pekerjaan dalam bahasa inggris.</p>
+<a  href="https://www.pujihartono.id/>Pujihartono.id</a>
+surat lamaran pekerjaan dalam bahasa inggris.
 
 
 RESOURCE :
-                    <a  href="https://www.pujihartono.id/>Pujihartono.id</a>
+                    
                     <a  href="https://surat-lamaran-kerja.netlify.app/>Panduan 1</a>
                     <a  href="https://contoh-psikotes-kerja.netlify.app/>Panduan 2</a>
     
