--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ persyaratan lamaran kerja
 contoh surat lamaran pekerjaan dalam bahasa inggris
 cara mengirim lamaran lewat email
 surat lamaran pekerjaan yang benar
-https://www.pujihartono.id/
+[pujihartono.id](https://www.pujihartono.id/)
 surat lamaran pekerjaan dalam bahasa inggris.
 
 
